--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
-      <div class="carousel-item active" style="height: 500px;">
-        <img class="d-block w-100"
+      <div class="carousel-item active" style="height: 960px;">
+        <img class="d-block w-100"  style="height: 960px;"
           src="https://www.saigon.park.hyattrestaurants.com/uploads/1/1/2/9/112964589/ladies-first-beefeater-1600x800_orig.png"
           alt="First slide">
         <div class="carousel-caption d-none d-md-block">
 
         </div>
       </div>
-      <div class="carousel-item" style="height: 500px;">
-        <img class="d-block w-100"
+      <div class="carousel-item" style="height: 960px;">
+        <img class="d-block w-100"  style="height: 960px;"
           src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t1.0-9/s960x960/39748359_947529668751779_4018671654711328768_o.jpg?_nc_cat=107&_nc_sid=e007fa&_nc_ohc=vCTyKz-rfwEAX9j-ej2&_nc_ht=scontent.fsgn3-1.fna&_nc_tp=7&oh=c7e01594159725151e515e0a9bd43ab4&oe=5EB5A9B8"
           height="500px" alt="Second slide">
         <div class="carousel-caption d-none d-md-block" style="background-color: rgba(41, 39, 39, 0.6);">
@@ -118,8 +118,8 @@
           <p class="hung-caption5">Sunday | 9:30PM - 11PM</p>
         </div>
       </div>
-      <div class="carousel-item" style="height: 500px;">
-        <img class="d-block w-100"
+      <div class="carousel-item" style="height: 960px;">
+        <img class="d-block w-100" style="height: 960px;"
           src="https://images.unsplash.com/photo-1562754221-eeff8ab1ec74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1496&q=80"
           alt="Third slide">
         <div class="carousel-caption d-none d-md-block">
