--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
       </div>
 
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev" style="z-index: 0;">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next" style="z-index: 0;">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
@@ -564,7 +564,7 @@
                 <img src="/author/an-ava.jpg" />
               </div>
               <div class="team-content px-1">
-                <h3>An Ngoan</h3>
+                <h3>Ngoan Tran</h3>
                 <span class="post px-1"> Product Owner </span>
               </div>
               <ul class="social">
