add my profile pic (m.png) to the author dir

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
           <div class="col col-cards">
             <div class="our-team">
               <div class="pic">
-                <img src="/images/ava.png" />
+                <img src="/author/m.png" />
               </div>
               <div class="team-content px-1">
                 <h3>Minh Vu</h3>
