--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
           <div class="col col-cards">
             <div class="our-team">
               <div class="pic">
-                <img src="/author/m.png" />
+                <img src="/author/minh-vu.png" />
               </div>
               <div class="team-content px-1">
                 <h3>Minh Vu</h3>
