--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             <div class="card-body d-flex flex-column justify-content-between">
               <h5 class="card-title text-light">AI/ML Data Science
               </h5>
-              <p class="card-text ">HTML/CSS, Javascript, React, Python, Flaskbr
+              <p class="card-text ">C++ algorithms & data structures
               </p>
               <a href="# " class="btn btn-primary w-100">Order</a>
             </div>
