--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
           <div class="col col-cards">
             <div class="our-team">
               <div class="pic">
-                <img src="/images/ava.png" />
+                <img src="/author/nhan-ava.jpg" />
               </div>
               <div class="team-content px-1">
                 <h3>Nhan Nguyen</h3>
@@ -558,7 +558,7 @@
             </div>
           </div>
 
-          <div class="col col-cards">
+          <digit v class="col col-cards">
             <div class="our-team">
               <div class="pic">
                 <img src="/author/an-ava.jpg" />
