--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
             </div>
           </div>
 
-          <digit v class="col col-cards">
+          <div class="col col-cards">
             <div class="our-team">
               <div class="pic">
                 <img src="/author/an-ava.jpg" />
