--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
   <link rel="stylesheet" href="css/nhanstyle.css">
   <link rel="stylesheet" href="css/an-final.css">
   <link rel="stylesheet" href="css/minh_booking.css">
+  <meta property="og:site_name" content="Gastro Bar"/>
+  <meta property="og:title" content="Gastro Bar"/>
+  <meta property="og:url" content="https://gastro-bar.netlify.com/">
+  <meta property="og:type" content="advertisation"/>
+  <meta property="og:image" content="https://s8.upanh.pro/2020/04/05/page3.jpg">
   <title>|||| Gastro Bar Club ||||</title>
 </head>
 
